# t4ext

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
injectee/: CMakeLists.txt
injectee/src/: Client.cpp  Client.h  main.cpp  types.h
injectee/src/bindings/: BindActorTypeInfo.cpp  BindBasicPhysics.cpp  BindBuiltins.cpp  BindCActor.cpp  BindCCamera.cpp  BindCGame.cpp  BindCLevel.cpp  BindGlobals.cpp  BindImGui.cpp  BindSystem.cpp  Bindings.cpp  Bindings.h
injectee/src/core/: AppBase.cpp  AppBase.h  Application.cpp  Application.h  CActor.cpp  CActor.h  CActorTypeInfo.h  CBlendedCamera.cpp  CBlendedCamera.h  CCamera.cpp  CCamera.h  CGame.cpp  CGame.h  CLevel.cpp  CLevel.h  DMPlayer.cpp  DMPlayer.h  Health.cpp  Health.h  List.hpp  Player.cpp  Player.h  Vector.hpp  WeaponWheel.cpp  WeaponWheel.h
injectee/src/events/: ActorAdded.cpp  ActorAdded.h  ActorCollision.cpp  ActorCollision.h  ActorCreate.cpp  ActorCreate.h  ActorDestroy.cpp  ActorDestroy.h  ActorUpdate.cpp  ActorUpdate.h  EngineCreate.cpp  EngineCreate.h  IEvent.cpp  IEvent.h  Keyboard.cpp  Keyboard.h  LevelCreate.cpp  LevelCreate.h  LevelDestroy.cpp  LevelDestroy.h  LevelSpawn.cpp  LevelSpawn.h  Log.cpp  Log.h  Timeout.cpp  Timeout.h  TypeScriptTimeout.cpp  TypeScriptTimeout.h  Update.cpp  Update.h
injectee/src/hooks/: Hooks.cpp  Hooks.h  d3d.cpp  d3d.h
injectee/src/script/: Bindings.cpp  CallHost.cpp  CallScript.hpp  Calling.h  Conversion.cpp  Conversion.h  IScriptAPI.cpp  IScriptAPI.h  IScriptAPI.hpp  TSHelpers.cpp  TSHelpers.h  TSInternal.cpp  TSInternal.h  TypeScriptAPI.cpp  TypeScriptAPI.h
injector/: CMakeLists.txt  newclass.bat
injector/src/: Application.cpp  Application.h  GameProcess.cpp  GameProcess.h  main.cpp
